--- a/client/views/project_submit.html
+++ b/client/views/project_submit.html
@@ -1,4 +1,5 @@
 <template name="projectSubmit">
+  <h4>Add new project</h4>
   <form class="main">
     <div class="form-group">
         <label class="form-label" for="title">Title</label>
