--- a/client/views/projects_list.html
+++ b/client/views/projects_list.html
@@ -25,7 +25,7 @@
 						{{/if}}
 					</td>
 					<td>{{name}}</td>
-					<td>({number})</td>
+					<td>{{number}}</td>
 					<td>Details</td>
 					<td>
 						<button type="button" class="btn btn-{{status}} btn-xs">
@@ -52,7 +52,7 @@
 						{{/if}}
 					</td>
 					<td>{{name}}</td>
-					<td>({number})</td>
+					<td>{{number}}</td>
 					<td>Details</td>
 					<td>
 						<button type="button" class="btn btn-{{status}} btn-xs">
