--- a/client/views/project_item.html
+++ b/client/views/project_item.html
@@ -1,7 +1,45 @@
 <template name="projectItem">
 	<div class="project">
 		<div class="project-content">
-			
+			{{#with project}}
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4>{{name}}</h4>
+					</div>
+					<table class="table">
+					  <tr class="headline">
+					  	<th>Name</th>
+					  	<th>Position</th>
+					  	<th>IMEI</th>
+					  	<th>IP</th>
+					  	<th>Last activity</th>
+					  	<th>Status</th>
+					  </tr>
+					  {{#each sensors}}
+					  <tr id="sensorlist">
+						<td>{{title}}</td>
+						<td><span class="glyphicon glyphicon-map-marker"></span> {{lat}},{{lon}}</td>
+						<td><span class="glyphicon glyphicon-phone"></span> {{IMEI}}</td>
+						<td><span class="glyphicon glyphicon-globe"></span> {{IP}}</td>
+						<td><span class="glyphicon glyphicon-time"></span> {{lastActivity}}</td>
+						<td>
+							<button type="button" class="btn btn-{{status}} btn-xs">
+							{{#if success}}
+								<span class="glyphicon glyphicon-ok"></span> OK
+							{{else}}
+								{{#if warning}}
+								<span class="glyphicon glyphicon-question-sign"></span> Warning
+								{{else}}
+								<span class="glyphicon glyphicon-remove"></span> Error
+								{{/if}}
+							{{/if}}
+							</button>
+							<td>
+					</tr>
+					{{/each}}
+					</table>
+				</div>
+			{{/with}}
 		</div>
 	</div>
 </template>
