--- a/client/views/project_item.html
+++ b/client/views/project_item.html
@@ -18,7 +18,7 @@
 					  {{#each sensors}}
 					  <tr id="sensorlist">
 						<td>{{title}}</td>
-						<td><span class="glyphicon glyphicon-map-marker"></span> {{lat}},{{lon}}</td>
+						<td><span class="glyphicon glyphicon-map-marker butt">{{lat}},{{lon}}</td>
 						<td><span class="glyphicon glyphicon-phone"></span> {{IMEI}}</td>
 						<td><span class="glyphicon glyphicon-globe"></span> {{IP}}</td>
 						<td><span class="glyphicon glyphicon-time"></span> {{lastActivity}}</td>
@@ -42,4 +42,21 @@
 			{{/with}}
 		</div>
 	</div>
+	<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					    <div class="modal-dialog">
+					      <div class="modal-content">
+					        <div class="modal-header">
+					          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					          <h4 class="modal-title">Modal title</h4>
+					        </div>
+					        <div class="modal-body">
+					          <img src="http://maps.google.com/maps/api/staticmap?center=57,12&zoom=13&size=500x300&sensor=false"></img>
+					        </div>
+					        <div class="modal-footer">
+					          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					          <button type="button" class="btn btn-primary">Save changes</button>
+					        </div>
+					      </div>
+					    </div>
+					  </div> -->
 </template>
