--- a/client/views/project_submit.html
+++ b/client/views/project_submit.html
@@ -13,12 +13,12 @@
             <input name="project" class="form-control" type="text" value="" placeholder="Project number"/>
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="form-label" for="details">Details</label>
         <div class="form-group">
             <textarea name="details" class="form-control" type="text" value="" placeholder="Details"/>
         </div>
-</div>
+</div> -->
     <div class="control-group">
         <div class="controls">
             <input type="submit" value="Submit" class="btn btn-primary"/>
